# substrate-aura-core-chain

./: Cargo.toml  HEADER-APACHE2  HEADER-GPL3  LICENSE-APACHE2  README.md
client/cli/: Cargo.toml
client/cli/src/frontier_db_cmd/: tests.rs
client/db/src/: parity_db_adapter.rs  upgrade.rs  utils.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/: worker.rs
client/mapping-sync/src/kv/: worker.rs
client/mapping-sync/src/sql/: mod.rs
client/rpc/src/overrides/: schema_v1_override.rs  schema_v2_override.rs  schema_v3_override.rs
frame/evm/src/: weights.rs
frame/hotfix-sufficients/src/: weights.rs
frame/substrate-validator-set/: Cargo.toml
frame/substrate-validator-set/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
template/: README.md
template/node/: Cargo.toml
template/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs
template/node/src/rpc/: mod.rs
ts-tests/tests/: config.ts
